# cms_backend

./: .env.example  alembic.ini  main.py  pyproject.toml  roadmap.md  summary.txt
.github/: copilot-instructions.md
alembic/: env.py
alembic/versions/: 1a2b3c4d5e6f_split_product_and_inward_fields.py  2b3c4d5e6f70_add_temperature_zones_and_room_fk.py  7142304e8e20_initial_schema.py  9c1d2e3f4a5b_add_password_actions_to_audit_action_enum.py  a7b9c1d3e5f7_reconcile_missing_inventory_and_audit_tables.py  b3d4e5f6a7b8_add_user_sessions.py  c4e5f6a7b8c9_add_inventory_ledger_and_audit_log.py  d5f6a7b8c9d0_add_products_skus_table.py  ee5fe9ae0bf8_add_password_reset_otps_table.py  f6a7b8c9d0e1_add_rooms_racks_rack_allocations_tables.py
app/: main.py  schemas.py
app/controllers/: admin_controller.py  auth_controller.py  client_controller.py  inventory_analytics_controller.py  operator_controller.py
app/core/: config.py  database.py  security.py
app/models/: __init__.py  audit_log.py  base.py  client.py  enums.py  inventory_ledger.py  invitation.py  operator_profile.py  password_reset_otp.py  permission.py  product.py  rack.py  rack_allocation.py  role.py  room.py  session.py  temperature_zone.py  user.py  warehouse.py
app/rbac/: context_resolver.py  decorators.py  dependencies.py  permission_seed.py
app/scripts/: create_admin.py
app/services/: audit_serializer.py  audit_service.py  auth_service.py  email_service.py  inventory_read_service.py  inventory_service.py  invitation_service.py  product_service.py  rack_service.py  room_service.py  session_service.py  (+3 more)
(+6 files in other folders)
